# laniakea-plugin-sdk

./: .gitignore  README.md  controller.go  datasource.go  go.mod  go.sum  interface.go  requirements.txt
docs/: README.md  go-plugin.md  python-plugin.md
examples/: main.go  plugin.py  plugin.spec
proto/: plugin.pb.go  plugin.proto  plugin_grpc.pb.go  plugin_pb2_grpc.py
protos/: plugin.pb.go
rs-plugin-sdk/: Cargo.toml  build.rs
rs-plugin-sdk/proto/: plugin.proto
